--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
               "src/assets/styles/core.css",
               "src/assets/styles/icon-font.min.css",
               "src/assets/styles/style.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
